[package]
name = "tiny-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
url = "2.5.0"
fake = "2.9.2"
rand = "0.8.5"
actix-web = "4"
actix-cors = "0.7.0"
actix-files = "0.6.5"
log = "0.4"
pretty_env_logger = "0.4"
dotenvy = "0.15"
